--- a/client/html/login.html
+++ b/client/html/login.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>TUESchat</title>
-    <link rel="stylesheet" href="C:\Users\eidoy\OneDrive\Desktop\VOT proekt\VCT-project-ELSYS-23\client\static\css\login.css">
-    <script src="C:\Users\eidoy\OneDrive\Desktop\VOT proekt\VCT-project-ELSYS-23\client\static\js\login.js"></script>
-    <!-- <script src="C:\Users\eidoy\OneDrive\Desktop\VOT proekt\VCT-project-ELSYS-23\server\db.js"></script> -->
+    <script defer src="/socket.io/socket.io.js"></script>
+		<script defer src="js/login.js"> </script>
+    <link rel="stylesheet" href="css/login.css">
+
   </head>
   <body>
     <form id="login-form" action="vot2.html" method="post">
