--- a/client/html/home.html
+++ b/client/html/home.html
@@ -8,7 +8,7 @@
 		<title> Document </title>
 		<link rel="stylesheet" href="css/style.css">
 		<script defer src="/socket.io/socket.io.js"></script>
-		<script defer src="/client/static/js/home.js"> </script>
+		<script defer src="js/home.js"> </script>
 	</head>
 
 	<body>
