--- a/client/html/login.html
+++ b/client/html/login.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>TUESchat</title>
     <script defer src="/socket.io/socket.io.js"></script>
+    <script defer src="js/auth.js"> </script>
 		<script defer src="js/login.js"> </script>
     <link rel="stylesheet" href="css/login.css">
 
