--- a/client/html/chat.html
+++ b/client/html/chat.html
@@ -12,6 +12,9 @@
       <h1 style="color: white; padding-left: 1%; padding-top: 0.5%;">TUESchat</h1>
     </div>
     <div id="chatbox"></div>
+
+	<button class="change_room"> Change room </button>
+
     <form id="chat-form">
       <input type="text" id="message-input" style="width: 90%;" placeholder="Type a message...">
       <button id = "send_message" type="button">Send</button>
