--- a/client/html/login.html
+++ b/client/html/login.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>TUESchat</title>
     <script defer src="/socket.io/socket.io.js"></script>
-    <script defer src="js/auth.js"> </script>
-		<script defer src="js/login.js"> </script>
-    <link rel="stylesheet" href="css/login.css">
+	<script defer src="js/auth.js"> </script>
+	<script defer src="js/login.js"> </script>
+	<link rel="stylesheet" href="css/login.css">
 
   </head>
   <body>
@@ -16,7 +16,8 @@
       <input type="text" id="username" />
       <label for="password">Password:</label>
       <input type="password" id="password" />
-      <button type="button" class="button">Sign in</button>
+      <button type="button" class="button">Submit</button>
+      <button type="button" class="redirect">Sign up</button>
     </form>
   </body>
 </html>
