--- a/client/html/register.html
+++ b/client/html/register.html
@@ -18,7 +18,8 @@
       <input type="password" id="password" />
       <label for="confirm-password">Confirm Password:</label>
       <input type="password" id="confirm-password" />
-      <button type="button" class="button">Sign in</button>
+      <button type="button" class="button">Submit</button>
+      <button type="button" class="redirect">Sign in</button>
     </form>
   </body>
 </html>
