--- a/client/html/chat.html
+++ b/client/html/chat.html
@@ -11,7 +11,9 @@
     <div id="header">
       <h1 style="color: white; padding-left: 1%; padding-top: 0.5%;">TUESchat</h1>
     </div>
-    <div id="chatbox"></div>
+    <div id="chatbox">
+      <p style = "display : none"></p>
+    </div>
     <form id="chat-form">
       <input type="text" id="message-input" style="width: 90%;" placeholder="Type a message...">
       <button id = "send_message" type="button">Send</button>
