--- a/client/html/chatrooms.html
+++ b/client/html/chatrooms.html
@@ -12,9 +12,9 @@
 
 	<form class="chatroom_container"> 
 		<h2> Create a chatroom </h2>
-		<input name="name" type="text" placeholder="Chatroom Name" />
-		<input name="members" type="text" placeholder="Member1, Member2 ..." />
-		<button> Submit </button>
+		<input id="name" type="text" placeholder="Chatroom Name" />
+		<input id="members" type="text" placeholder="Member1, Member2 ..." />
+		<button type="button"> Submit </button>
 	</form>
   </body>
 </html>
